# closetbot

./: .gitignore  README.md  workspace.code-workspace
documentation/: gazebo-on-docker.txt
src/closetbot/: CMakeLists.txt  dexarm.code-workspace  package.xml  spawn_ent_scratchpad
src/closetbot-ai/: CMakeLists.txt  production_system.cpp
src/closetbot-ai/src/: frames.cpp  production_system.cpp
src/closetbot/bringup/: wiggle.cpp
src/closetbot/config/: arm_controller (another copy).yaml  arm_controller (copy).yaml  arm_controller copy.yaml  controllers copy 2.yaml  controllers copy.yaml  controllersHardware.yaml  disparity-params.yaml  gazebo_controllers.yaml  gazebo_controllers1.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
src/closetbot/config/camera/: usb_cam2.yaml
src/closetbot/gazebo_models/four_meter_walls/: model.config  model.sdf
src/closetbot/helper scripts/: bld --packages-skip geometric_shapes gra.yml
src/closetbot/include/closetbot/: closetbot.hpp  command.hpp  detect.hpp  process_received.hpp  protocol_code.hpp  serialize.hpp
src/closetbot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/closetbot/launch/: gazebolaunch.launch copy 2.py  gazebolaunch.launch copy 3.py  gazebolaunch.launch copy 5.py  gazebolaunch.launch copy 6.py  gazebolaunch.launch copy.py  gazebolaunch.launch copy4.py  gazebolaunch.launch.py  gazebolaunch.launch.py ControllerManagerWorks  move_group.launch.py  view_robot.launch.py
src/closetbot/log/: latest_build
src/closetbot/meshes(copy)/splits/arm/: [Content_Types].xml
src/closetbot/rviz/: view_robot (another copy).rviz  view_robot.rviz
src/closetbot/src/: closetbot.cpp  command.cpp  detect.cpp  my_node.cpp  process_received.cpp  serialize.cpp
src/closetbot/test/: Testing_commands
src/closetbot/urdf/: DexArm.srdf copy.xacro  DexArm.srdf.xacro  DexArm.urdf copy 2.xacro  DexArm.urdf copy 3.xacro humble working not spazzing anymore  DexArm.urdf copy.xacro  DexArm.urdf.xacro  DexArm.urdf.xacro WORKING WITH GAZEBO AND MOVEIT  DexArm.urdf.xacro WORKING WITH OCTOMAP  DexArmHardware.srdf.xacro  DexArmHardware.urdf.xacro
src/moveit2_scripts/: CMakeLists.txt  package.xml
src/moveit2_scripts/launch/: test_trajectory2.launch-grasp.py  test_trajectory2.launch.py
src/moveit2_scripts/src/: grasp.cpp  test_trajectory2 humble stopped workingcopy.cpp  test_trajectory2 movement working.cpp  test_trajectory2 werid class stuff.cpp  test_trajectory2.cpp
